feat(#117): add the http port to invite team members (#164)
* feat(#117): define the endpoints for bulk invitation and invite confirmation

* WIP
